--- a/assets/css/helpers.css
+++ b/assets/css/helpers.css
@@ -13,3 +13,17 @@
 .input::placeholder {
     color: white;
 }
+/* .subtitle {
+    white-space: nowrap;
+} */
+
+/* .hero-text {
+     font-size: 3rem;
+    white-space: normal;
+} */
+
+@media (max-width: 672px) {
+	:root {
+		font-size: 90%;
+	}
+}
