added containers for sunrise/noon/sunset, changed dropdown menu for recent searches to black backgrounf and danger on hover.

--- a/assets/css/helpers.css
+++ b/assets/css/helpers.css
@@ -13,6 +13,10 @@
 .input::placeholder {
     color: white;
 }
+
+.navbar-item:hover {
+  background-color: hsl(348, 100%, 61%) !important;
+}
 /* .subtitle {
     white-space: nowrap;
 } */
