reformat of hero section, moved data cards, mobile responsive.

--- a/assets/css/helpers.css
+++ b/assets/css/helpers.css
@@ -75,6 +75,9 @@ input:focus::placeholder {
 		font-size: 90%;
 	}
 }
+/* card positioning */
+#times-sunrise {
+}
 
 /* Search section */
 .search {
