scroll cue only appears 1024px wide and above, retitle the new header displays spans weirdly between ~766px and 920px

--- a/assets/css/helpers.css
+++ b/assets/css/helpers.css
@@ -93,6 +93,7 @@ input:focus::placeholder {
     right: 0;
   text-align: center;
   z-index: 1;
+  display: none;
 }
 
 @keyframes fade-slide-up {
@@ -128,15 +129,12 @@ input:focus::placeholder {
 }
 
 /* Scroll cue end */
-/* 
-#times-sunrise {
 
+
+@media screen and (min-width: 1024px)
+{
+  .header-down-arrow
+  {
+    display: block;
+  }
 }
-
-#times-noon {
-
-}
-
-#times-sunset {
-
-} */
