got rid of red hover on navbar links in main navbar- children still hover red , git hub link no longer white on hover

--- a/assets/css/helpers.css
+++ b/assets/css/helpers.css
@@ -21,7 +21,9 @@ input:focus::placeholder {
 .navbar-item:hover {
   background-color: hsl(348, 100%, 61%) !important;
 } */
-
+#github-link:hover {
+  background-color:hsl(0, 0%, 4%);
+}
 #recent-search:hover, 
 #navbar-itm-1:hover,
 #navbar-itm-2:hover {
